<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.isma.trabajopractico3angelorozco.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_Listar"
            app:destination="@id/Listar" />
        <action
            android:id="@+id/action_nav_home_to_Cargar"
            app:destination="@id/Cargar" />
        <action
            android:id="@+id/action_nav_home_to_Eliminar"
            app:destination="@id/Eliminar" />
        <action
            android:id="@+id/action_nav_home_to_Salir"
            app:destination="@id/Salir" />
    </fragment>

    <fragment
        android:id="@+id/Cargar"
        android:name="com.isma.trabajopractico3angelorozco.ui.cargar.Cargar"
        android:label="@string/Cargar"
        tools:layout="@layout/fragment_cargar" >
        <action
            android:id="@+id/action_Cargar_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/Listar"
        android:name="com.isma.trabajopractico3angelorozco.ui.listar.Listar"
        android:label="@string/Listar"
        tools:layout="@layout/fragment_listar" >
        <action
            android:id="@+id/action_Listar_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment android:id="@+id/Eliminar"
        android:name="com.isma.trabajopractico3angelorozco.ui.eliminar.Eliminar"
        android:label="@string/Eliminar"
        tools:layout="@layout/fragment_eliminar" >
        <action
            android:id="@+id/action_Eliminar_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_Eliminar_to_detalleProducto"
            app:destination="@id/detalleProducto" />
    </fragment>
    <fragment
        android:id="@+id/Salir"
        android:name="com.isma.trabajopractico3angelorozco.ui.salir.Salir"
        android:label="@string/Salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/detalleProducto"
        android:name="com.isma.trabajopractico3angelorozco.ui.detalle.DetalleProducto"
        android:label="fragment_detalle_producto"
        tools:layout="@layout/fragment_detalle_producto" />
</navigation>